# pyruhvro

./: CLAUDE.md  Cargo.toml  README.md  generate_avro.py  prof.json  profile.json  pyproject.toml  scratch.py  test_timestamp.py  timestamp_data.avro
.github/workflows/: CI.yml
ruhvro/: Cargo.toml  README.md  profile.json
ruhvro/benches/: deserialize.rs  serialize.rs
ruhvro/benches/common/: mod.rs
ruhvro/examples/: prof_decode.rs
ruhvro/src/: complex.rs  conversions.rs  deserialize.rs  fast_decode.rs  fast_encode.rs  lib.rs  schema_translate.rs  serialization_containers.rs  serialize.rs  utils.rs
scripts/: benchmark_sweep.py  generate_avro.py  run_benchmarks.sh
src/: lib.rs
