
[profile.release]
codegen-units = 1
lto = "fat"

# Profile used by `cargo bench`. Keeps release-level optimizations but adds
# line-tables debug info so profilers (samply, cargo flamegraph) can
# symbolicate the bench binaries.
[profile.bench]
debug = "line-tables-only"

[workspace]
members = [
    "ruhvro",
    ]

[package]
name = "pyruhvro"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["avro", "arrow", "kafka"]
description = "Fast, multi-threaded deserialization of schema-less avro encoded messages"
repository = "https://github.com/Tyler-Sch/pyruhvro"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyruhvro"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28"
ruhvro = {path = "ruhvro", version = "0.3.1"}
apache-avro = "0.21"
arrow = {version = "58", features = ["pyarrow"]}

