[package]
name = "ruhvro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9.0"
apache-avro = "0.16.0"
arrow = { version = "50.0.0", features = [ "pyarrow" ]}
anyhow = "1.0.80"
itertools = "0.12.1"
enum-as-inner = "0.6.0"