[package]
name = "ruhvro"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["avro", "arrow", "kafka"]
description = "Fast, multi-threaded deserialization of schema-less avro encoded messages"
repository = "https://github.com/Tyler-Sch/pyruhvro"

[dependencies]
rayon = "1.9.0"
apache-avro = "0.16.0"
arrow = { version = "52.0.0", features = [ "pyarrow" ]}
anyhow = "1.0.80"