[package]
name = "ruhvro"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["avro", "arrow", "kafka"]
description = "Fast, multi-threaded deserialization of schema-less avro encoded messages"
repository = "https://github.com/Tyler-Sch/pyruhvro"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
apache-avro = "0.21"
arrow = "58"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "deserialize"
harness = false

[[bench]]
name = "serialize"
harness = false